--- a/index.html
+++ b/index.html
@@ -325,11 +325,12 @@
          -->
 
          <div class="collapse" style="padding: 100px;">
-           <vi-collapse>
-             <vi-collapse-item title="标题1">内容1</vi-collapse-item>
-             <vi-collapse-item title="标题2">内容2</vi-collapse-item>
-             <vi-collapse-item title="标题3">内容3</vi-collapse-item>
+           <vi-collapse :selected.sync="selectedCola">
+             <vi-collapse-item title="标题1" name="1">内容1</vi-collapse-item>
+             <vi-collapse-item title="标题2" name="2">内容2</vi-collapse-item>
+             <vi-collapse-item title="标题3" name="3">内容3</vi-collapse-item>
            </vi-collapse>
+           {{selectedCola}}
          </div>
       </div>
 </body>
