--- a/index.html
+++ b/index.html
@@ -331,6 +331,20 @@
              <vi-collapse-item title="标题3" name="3">内容3</vi-collapse-item>
            </vi-collapse>
            {{selectedCola}}
+           <br>
+           <vi-collapse :selected.sync="selectedCola1" single>
+            <vi-collapse-item title="标题1" name="1">内容1</vi-collapse-item>
+            <vi-collapse-item title="标题2" name="2">内容2</vi-collapse-item>
+            <vi-collapse-item title="标题3" name="3">内容3</vi-collapse-item>
+          </vi-collapse>
+          {{selectedCola1}}
+          <br>
+           <vi-collapse :selected.sync="selectedCola2" single>
+            <vi-collapse-item title="标题1" name="1">内容1</vi-collapse-item>
+            <vi-collapse-item title="标题2" name="2">内容2</vi-collapse-item>
+            <vi-collapse-item title="标题3" name="3">内容3</vi-collapse-item>
+          </vi-collapse>
+          {{selectedCola2}}
          </div>
       </div>
 </body>
