调整button.vue的代码以及样式

--- a/index.html
+++ b/index.html
@@ -11,39 +11,21 @@
       padding: 0;
       box-sizing: border-box;
     }
- .test{
-   /* fill: red; */
-   /* background: green; */
-   /* margin-top: 100px; */
-
- }
- .grid{
+ 
+ /* .grid{
    margin: 0 2px;
    margin-top: 10px;
- }
- .row{
+ } */
+ /* .row{
    margin-bottom: 10px;
- }
- .row:last-child{
+ } */
+ /* .row:last-child{
     margin-bottom: 0;
- }
- 
- .col{
-  background: #f9fafc;
-  /* border: 1px solid red; */
-  min-height: 36px;
-  /* background: gray; */
- }
- 
- .test{
-   /* height: 100%;
-   background: yellow;
-   border-radius: 3px; */
- }
+ } */
 
   </style>
   <style>
-    .vi-main{
+    /* .vi-main{
       background-color: #E9EEF3;
       color: #333;
       text-align: center;
@@ -72,28 +54,7 @@
     
     .vi-container:nth-child(7) .vi-aside {
       line-height: 320px;
-    }
-    .vi-icon-default{
-      /* fill: red; */
-      /* width: 4em;
-      height: 4em;
-      padding: 0; */
-    }
-    .test{
-      /* display: inline; */
-      background: yellow;
-      margin-top: 100px;
-      margin-left: 10px;
-    }
-    .tabs{
-      /* width: 50%; */
-      /* color: #e1e1; */
-    }
-    .vi-tabs-item-icon{
-      /* fill: red; */
-      width: 60px;
-      height:60px;
-    }
+    } */
   </style>
 </head>
 
@@ -108,39 +69,39 @@
       <vi-icon vi-icon-name="clear" vi-icon-size=small></vi-icon>
     </div> -->
 
-    <!-- <div class="button">
+    <div class="button">
       <vi-button >默认</vi-button>
       <vi-button type="default">默认样式</vi-button>
       <vi-button type="primary" icon-name="upload" >主要按钮</vi-button>
       <vi-button type="primary" icon-name="upload" icon-size="medium" circle="circle"></vi-button>
       <vi-button type="primary" icon-name="upload" icon-position="right">主要按钮</vi-button>
       <vi-button type="primary" icon-name="upload" icon-size="medium" circle="circle" disabled="disabled"></vi-button>
-    </div> -->
+    </div>
 
-    <!-- <div class="buttonGroup">
+    <div class="buttonGroup">
       <vi-button-group>
         <vi-icon class="ss" vi-icon-name="left" vi-icon-size=small></vi-icon>
         <vi-icon class="ss" vi-icon-name="pause" vi-icon-size=small></vi-icon>
         <vi-icon class="ss" vi-icon-name="right" vi-icon-size=small></vi-icon>
-      </vi-button-group> -->
-      <!-- <br> -->
-      <!-- <vi-button-group>
+      </vi-button-group>
+      <br>
+      <vi-button-group>
           <vi-button type="primary">默认样式</vi-button>
           <vi-button type="primary">主要按钮</vi-button>
-      </vi-button-group> -->
-      <!-- <br> -->
-      <!-- <vi-button-group>
+      </vi-button-group>
+      <br>
+      <vi-button-group>
           <vi-button>默认样式</vi-button>
           <vi-button >主要按钮</vi-button>
-      </vi-button-group> -->
-      <!-- <vi-button-group>
-          <vi-button type="primary" icon-name="left" icon-size=small>上一页</vi-button>
-          <vi-button type="primary" icon-name="left" icon-size=small>上一页</vi-button>
-          <vi-button type="primary" icon-name="right" icon-size=small icon-position="right">下一页</vi-button>
       </vi-button-group>
-    </div> -->
-    <!-- <hr>
-    <br> -->
+      <vi-button-group>
+          <vi-button type="primary" icon-name="left" icon-size=small>上一页</vi-button>
+          <vi-button type="primary" icon-name="loading" icon-size=small>上一页</vi-button>
+          <vi-button type="primary" icon-name="search" icon-size=small icon-position="right">下一页</vi-button>
+      </vi-button-group>
+    </div>
+    <hr>
+    <br>
     <!-- <div class="input">
       <vi-input placeholder="prefix" suffix-icon="info" @click="aa"></vi-input>
       <vi-input placeholder="prefix" prefix-icon="info" @click="aa"></vi-input>
@@ -324,7 +285,7 @@
         </div>
          -->
 
-         <div class="collapse" style="padding: 100px;">
+         <!-- <div class="collapse" style="padding: 100px;">
            <vi-collapse :selected.sync="selectedCola">
              <vi-collapse-item title="标题1" name="1">内容1</vi-collapse-item>
              <vi-collapse-item title="标题2" name="2">内容2</vi-collapse-item>
@@ -345,7 +306,7 @@
             <vi-collapse-item title="标题3" name="3">内容3</vi-collapse-item>
           </vi-collapse>
           {{selectedCola2}}
-         </div>
+         </div> -->
       </div>
 </body>
 
