写button组件测试文件

--- a/index.html
+++ b/index.html
@@ -309,8 +309,6 @@
          </div> -->
       </div>
 </body>
-
-<script>
-  // console.log(1)
-</script>
+<!-- <script src="./dist/test.js"></script> -->
+<script src="./dist/test.js"></script>
 </html>
