--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
       <vi-input placeholder="prefix" suffix-icon="info" @click="aa"></vi-input>
       <vi-input placeholder="prefix" prefix-icon="info" @click="aa"></vi-input>
       <vi-input placeholder="suffix" clearable suffix-icon="error" @input="yyy"></vi-input>
-      <vi-input placeholder="suffix" clearable prefix-icon="error" ></vi-input>
+      {{input1}}
+      <vi-input placeholder="suffix" v-model="input1"></vi-input>
       <vi-input placeholder="请输入内容" readonly v-model="input1"></vi-input>
       <vi-input placeholder="请输入内容" v-model="input1" @input="yyy" @change="aa"></vi-input>
       <vi-input disabled placeholder="禁止修改"></vi-input>
