--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <br>
     <br> -->
 
-    <div class="grid">
+    <!-- <div class="grid">
       <vi-row class="row">
         <vi-col class="col" :span="24">
           <div class="grid-content bg-purple-dark">gfg</div>
@@ -170,7 +170,7 @@
           <div class="grid-content bg-purple">l</div>
         </vi-col>
       </vi-row>
-    </div>
+    </div> -->
     <!-- <hr>
     <br> -->
     <!-- <div class="layout">
@@ -189,21 +189,21 @@
       </vi-container>
     </div> -->
 
-    <!-- <div class="toast test"> -->
-      <!-- <vi-toast>
+    <div class="toast test">
+      <vi-toast>
         <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
-      </vi-toast> -->
-      <!-- <hr> -->
-        <!-- <button @click="showToast">点我</button>
+      </vi-toast>
+      <hr>
+        <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
-    </div> -->
+    </div>
     <!-- <vi-tabs class="tabs" :selected.sync="selectedTab">
       <vi-tabs-bar color="teal" space="around" line-color="aqua">
         <vi-tabs-item name="woman" line-color="aqua">标签1</vi-tabs-item>
