--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
       </vi-container>
     </div> -->
 
-    <div class="toast test">
+    <!-- <div class="toast test">
         <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
-    </div>
-    <!-- <vi-tabs class="tabs" :selected.sync="selectedTab">
+    </div> -->
+    <vi-tabs class="tabs" :selected.sync="selectedTab">
       <vi-tabs-bar color="teal" space="around" line-color="aqua">
         <vi-tabs-item name="woman" line-color="aqua">标签1</vi-tabs-item>
         <vi-tabs-item name="finance" line-color="aqua">标签2</vi-tabs-item>
@@ -243,7 +243,7 @@
             <vi-tabs-content name="finance">标签2的内容</vi-tabs-content>
             <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
           </vi-tabs-body>
-        </vi-tabs> -->
+        </vi-tabs>
         <!-- <div class="popover" style="overflow: hidden;padding: 5px;border: 1px solid greenyellow;" @click="yyy">
           <vi-popover position="top">
             <template slot="content">
