--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
 <body>
   <!-- <div style="border:1px solid blue;height: 500px;"></div> -->
   <div id="app">
-    <!-- <div class="icon">
+    <div class="icon">
       <vi-icon class="test" vi-icon-name="info" vi-icon-size="small"></vi-icon>
       <vi-icon vi-icon-name="search" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="error" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="info" vi-icon-size=small></vi-icon>
-      <vi-icon vi-icon-name="clear" vi-icon-size=small></vi-icon>
-    </div> -->
+    </div>
 
-    <!-- <div class="button">
+    <div class="button">
       <vi-button >默认</vi-button>
       <vi-button type="default">默认样式</vi-button>
       <vi-button type="primary" icon-name="upload" >主要按钮</vi-button>
@@ -63,9 +62,9 @@
 
     <div class="buttonGroup">
       <vi-button-group>
-        <vi-icon class="ss" vi-icon-name="left" vi-icon-size=small></vi-icon>
-        <vi-icon class="ss" vi-icon-name="pause" vi-icon-size=small></vi-icon>
-        <vi-icon class="ss" vi-icon-name="right" vi-icon-size=small></vi-icon>
+        <vi-icon vi-icon-name="left" vi-icon-size=small></vi-icon>
+        <vi-icon vi-icon-name="pause" vi-icon-size=small></vi-icon>
+        <vi-icon vi-icon-name="right" vi-icon-size=small></vi-icon>
       </vi-button-group>
       <br>
       <vi-button-group>
@@ -82,7 +81,7 @@
           <vi-button type="primary" icon-name="loading" icon-size=small>上一页</vi-button>
           <vi-button type="primary" icon-name="search" icon-size=small icon-position="right">下一页</vi-button>
       </vi-button-group>
-    </div> -->
+    </div>
     <!-- <hr>
     <br> -->
     <!-- <div class="input">
@@ -244,7 +243,7 @@
             <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
           </vi-tabs-body>
         </vi-tabs> -->
-        <div class="popover" style="padding: 50px;border: 1px solid greenyellow;">
+        <!-- <div class="popover" style="padding: 50px;border: 1px solid greenyellow;">
           <vi-popover position="top">
             <template slot="content">
               <div>popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容</div>
@@ -296,7 +295,7 @@
             </template>
             <vi-button type="primary">点击</vi-button>
           </vi-popover>
-        </div>
+        </div> -->
         
 
          <!-- <div class="collapse" style="padding: 100px;">
